Scale added, OrderOfGrowthComparator removed, reduce expand and symbolic simplified, AlgEngine reworked, PriorityComparator updated, create no longer needed, before Infinity update